--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,10 +47,10 @@ jobs:
   release-ios:
     needs: run-static-checks
     environment: prod
-    runs-on: macos-12
+    runs-on: macos-13-xlarge
     steps:
       - id: set-xcode-version
-        run: sudo xcode-select -s '/Applications/Xcode_14.2.app/Contents/Developer'
+        run: sudo xcode-select -s '/Applications/Xcode_15.2.app/Contents/Developer'
         shell: bash
       - id: checkout
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab #v3.5.2
@@ -59,7 +59,7 @@ jobs:
       - id: setup
         uses: ./.github/actions/setup-composite
       - id: setup-ruby
-        uses: ruby/setup-ruby@d2b39ad0b52eca07d23f3aa14fdf2a3fcc1f411c #v1.149.0
+        uses: ruby/setup-ruby@5f19ec79cedfadb78ab837f95b87734d0003c899 #v1.173.0
         with:
           bundler-cache: true
       - id: prepare-ios-build
