--- a/package.json
+++ b/package.json
@@ -265,6 +265,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-native-a11y": "^3.3.0",
     "eslint-plugin-sonarjs": "^0.11.0",
     "fs-extra": "^7.0.0",
     "husky": "^8.0.0",
