--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -9,7 +9,7 @@ jobs:
    uses: ./.github/workflows/staticcheck.yaml
   build-detox-app:
     needs: run-static-checks
-    runs-on: macos-12-large
+    runs-on: macos-12
     concurrency:
       group: ${{ github.workflow }}-e2e-tests-${{ github.ref || github.run_id }}
       cancel-in-progress: true
