--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "@pagopa/io-react-native-http-client": "^0.1.3",
     "@pagopa/io-react-native-login-utils": "^1.0.0",
     "@pagopa/io-react-native-zendesk": "^0.3.29",
-    "@pagopa/react-native-cie": "1.2.0",
+    "@pagopa/react-native-cie": "https://github.com/pagopa/io-cie-sdk#IOPID-1714-cie-crash-ios",
     "@pagopa/ts-commons": "^10.15.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-camera-roll/camera-roll": "5.6.1",
