chore: move mixpanel url into env file

--- a/.env.local
+++ b/.env.local
@@ -30,6 +30,8 @@ CONTENT_REPO_URL='http://127.0.0.1:3000/static_contents'
 PRIVACY_URL='https://io.italia.it/app-content/tos_privacy.html'
 # Privacy url for Zendesk usage
 ZENDESK_PRIVACY_URL='https://www.pagopa.it/it/privacy-policy-assistenza/'
+# Mixpanel 
+MIXPANEL_URL='https://api-eu.mixpanel.com'
 MIXPANEL_TOKEN='0cb505dace6f4b3ceb9e17c7fcd7c66f'
 # Test overlay caption, if the string is nonempty will be displayed in the TestOverlay
 # TEST_OVERLAY_CAPTION='Functionality name here!'
