--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^4.0.5",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-pager-view": "^6.2.3",
     "react-native-pdf": "^6.4.0",
