--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "react-native-crypto": "^2.1.0",
     "react-native-device-info": "^10.8.0",
     "react-native-document-picker": "^9.1.1",
+    "react-native-easing-gradient": "^1.1.1",
     "react-native-exception-handler": "^2.10.8",
     "react-native-fingerprint-scanner": "^6.0.0",
     "react-native-flag-secure-android": "^1.0.3",
