--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "@react-navigation/native": "6.1.9",
     "@react-navigation/stack": "6.3.20",
     "@redux-saga/testing-utils": "^1.1.3",
+    "@shopify/react-native-skia": "^1.2.3",
     "@xstate/react": "^3.0.1",
     "async-mutex": "^0.1.3",
     "buffer": "^4.9.1",
