--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "@react-navigation/stack": "6.3.20",
     "@redux-saga/testing-utils": "^1.1.3",
     "@xstate/react": "^3.0.1",
+    "@xstate/react5": "npm:@xstate/react@4.1.1",
     "async-mutex": "^0.1.3",
     "buffer": "^4.9.1",
     "color": "^3.0.0",
@@ -217,7 +218,8 @@
     "vision-camera-code-scanner": "^0.2.0",
     "xml2js": "^0.5.0",
     "xss": "1.0.10",
-    "xstate": "^4.33.6"
+    "xstate": "^4.33.6",
+    "xstate5": "npm:xstate@5.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.8",
