--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -60,7 +60,7 @@ jobs:
           retention-days: 2
   run-e2e-tests:    
     needs: build-detox-app
-    runs-on: macos-latest
+    runs-on: macos-12
     environment: dev
     strategy: 
       fail-fast: false
