--- a/package.json
+++ b/package.json
@@ -116,8 +116,8 @@
     "@react-navigation/native": "6.1.9",
     "@react-navigation/stack": "6.3.20",
     "@redux-saga/testing-utils": "^1.1.3",
-    "@xstate/react": "^3.0.1",
-    "@xstate/react5": "npm:@xstate/react@4.1.1",
+    "@xstate/react": "npm:@xstate/react@4",
+    "@xstate4/react": "npm:@xstate/react@3.0.1",
     "async-mutex": "^0.1.3",
     "buffer": "^4.9.1",
     "color": "^3.0.0",
@@ -218,8 +218,8 @@
     "vision-camera-code-scanner": "^0.2.0",
     "xml2js": "^0.5.0",
     "xss": "1.0.10",
-    "xstate": "^4.33.6",
-    "xstate5": "npm:xstate@5.11.0"
+    "xstate": "^5",
+    "xstate4": "npm:xstate@4.33.6"
   },
   "devDependencies": {
     "@babel/core": "^7.18.8",
